jenkins/manifests/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jenkins-svc
subsets:
  - addresses:
      - ip: "192.168.2.100"
    ports:
      - port: 8080
