jenkins/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
