jenkins/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "jk.newto.uk"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
